syntax = "proto3";
import "google/protobuf/timestamp.proto";
package gandelm.label.v1;

service LabelService {
  rpc List(ListRequest) returns (ListResponse);
  rpc Get(GetRequest) returns (GetResponse);
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc Delete(DeleteRequest) returns (DeleteResponse);
}

message ListRequest {}
message ListResponse { repeated Label labels = 1; }

message GetRequest { string label_id = 1; }
message GetResponse { Label label = 1; }

message CreateRequest {
  string id = 1;
  string title = 2;
  string description = 3;
  string color = 4;
}

message CreateResponse { Label label = 1; }

message UpdateRequest { Label label = 1; }

message UpdateResponse { Label label = 1; }

message DeleteRequest { string label_id = 1; }

message DeleteResponse {}

message Label {
  string id = 1;
  string title = 2;
  string description = 3;
  string color = 4;
  google.protobuf.Timestamp created_at = 5;
  google.protobuf.Timestamp updated_at = 6;
}
